borre clases innecesarias

--- a/perfil.html
+++ b/perfil.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="profile-main-container">
-            <div class="grid-container profile-container">
+            <div class="profile-container">
                 <div>
                     <img src="assets/img/profile-pic.jpg" alt="">
                 </div>
@@ -58,46 +58,56 @@
         </section>
 
         <section class="profile-main-proyects">
-            <div class="grid-container">
                 <h3 style="font-size: 3rem;">PROYECTOS</h3>
                 <div class="proyects-main-container">
                     <article class="proyect-container">
                         <h4 style="padding: 0 20px 0 20px; font-size: 1.9rem;">TÍTULO</h4>
-                        <p class="text-proyect-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                        <p class="text-proyect-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!</</p>
+                            libero nam. Distinctio, accusamus magni!</< /p>
                     </article>
                     <article class="proyect-container">
                         <h4 style="padding: 0 20px 0 20px; font-size: 1.9rem;">TÍTULO</h4>
-                        <p class="text-proyect-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                        <p class="text-proyect-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!</</p>
+                            libero nam. Distinctio, accusamus magni!</< /p>
                     </article>
                     <article class="proyect-container">
                         <h4 style="padding: 0 20px 0 20px; font-size: 1.9rem;">TÍTULO</h4>
-                        <p class="text-proyect-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                        <p class="text-proyect-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatibus corporis iusto
+                            libero nam. Distinctio, accusamus magni!Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Fugiat voluptatibus corporis iusto
                             consequuntur odio est saepe aliquid illum, odit repellat minima a enim exercitationem fugit
-                            libero nam. Distinctio, accusamus magni!</</p>
+                            libero nam. Distinctio, accusamus magni!</< /p>
                     </article>
-                </div>
             </div>
         </section>
         <section class="contact-main-container">
